--- a/isis/src/control/apps/jigsaw/tsts/apollo/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/apollo/Makefile
@@ -25,70 +25,70 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) -1 $(INPUT)/*.cub > $(OUTPUT)/cube.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
-	cnet=$(INPUT)/Ames_7-ImageLSTest_USGS_combined.net \
-	onet=$(OUTPUT)/apollo_specialK_out.net \
-	radius=yes \
-	twist=yes \
-	update=no \
-	maxits=50 \
-	method=specialk \
-	errorpropagation=yes \
-	outlier_rejection=no \
-	sigma0=1.e-10  \
-	bundleout_txt=yes \
-	output_csv=yes \
-	residuals_csv=yes \
-	ckdegree=2 \
-	cksolvedegree=2 \
-	camsolve=angles \
-	spsolve=position \
-	spacecraft_position_sigma=1000.0 \
-	camera_angles_sigma=2.0 > /dev/null;
-	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
-	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
-	  > $(OUTPUT)/apollo_specialK_bundleout.txt;
-	cat residuals.csv \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	  > $(OUTPUT)/apollo_specialK_residuals.csv;
-	cat bundleout_images.csv \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	  > $(OUTPUT)/apollo_specialK_bundleout_images.csv;
+	           cnet=$(INPUT)/Ames_7-ImageLSTest_USGS_combined.net \
+	           onet=$(OUTPUT)/apollo_specialK_out.net \
+	           radius=yes \
+	           twist=yes \
+	           update=no \
+	           maxits=50 \
+	           method=specialk \
+	           errorpropagation=yes \
+	           outlier_rejection=no \
+	           sigma0=1.e-10  \
+	           bundleout_txt=yes \
+	           output_csv=yes \
+	           residuals_csv=yes \
+	           ckdegree=2 \
+	           cksolvedegree=2 \
+	           camsolve=angles \
+	           spsolve=position \
+	           spacecraft_position_sigma=1000.0 \
+	           camera_angles_sigma=2.0 > /dev/null;
+	$(CAT) bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
+	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+	       | $(SED) 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	       | $(SED) s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
+	       > $(OUTPUT)/apollo_specialK_bundleout.txt;
+	$(CAT) residuals.csv \
+	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+	       > $(OUTPUT)/apollo_specialK_residuals.csv;
+	$(CAT) bundleout_images.csv \
+	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+	       > $(OUTPUT)/apollo_specialK_bundleout_images.csv;
 	$(RM) bundleout_images.csv > /dev/null;
 	$(MV) bundleout_points.csv $(OUTPUT)/apollo_specialK_bundleout_points.csv > /dev/null;
 	$(RM) bundleout.txt print.prt > /dev/null;
 	$(RM) residuals.csv > /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis  \
-	cnet=$(INPUT)/Ames_7-ImageLSTest_USGS_combined.net \
-	onet=$(OUTPUT)/apollo_cholmod_out.net \
-	radius=yes \
-	twist=yes \
-	update=no \
-	maxits=50 \
-	errorpropagation=yes \
-	outlier_rejection=no \
-	sigma0=1.e-10  \
-	bundleout_txt=yes \
-	output_csv=yes \
-	residuals_csv=yes \
-	ckdegree=2 \
-	cksolvedegree=2 \
-	camsolve=angles \
-	spsolve=position \
-	spacecraft_position_sigma=1000.0 \
-	camera_angles_sigma=2.0 > /dev/null;
-	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
-	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
-	  > $(OUTPUT)/apollo_cholmod_bundleout.txt;
-	cat residuals.csv \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	  > $(OUTPUT)/apollo_cholmod_residuals.csv;
-	cat bundleout_images.csv \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	  > $(OUTPUT)/apollo_cholmod_bundleout_images.csv;
+	           cnet=$(INPUT)/Ames_7-ImageLSTest_USGS_combined.net \
+	           onet=$(OUTPUT)/apollo_cholmod_out.net \
+	           radius=yes \
+	           twist=yes \
+	           update=no \
+	           maxits=50 \
+	           errorpropagation=yes \
+	           outlier_rejection=no \
+	           sigma0=1.e-10  \
+	           bundleout_txt=yes \
+	           output_csv=yes \
+	           residuals_csv=yes \
+	           ckdegree=2 \
+	           cksolvedegree=2 \
+	           camsolve=angles \
+	           spsolve=position \
+	           spacecraft_position_sigma=1000.0 \
+	           camera_angles_sigma=2.0 > /dev/null;
+	$(CAT) bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
+	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+	       | $(SED) 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	       | $(SED) s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
+	       > $(OUTPUT)/apollo_cholmod_bundleout.txt;
+	$(CAT) residuals.csv \
+	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+	       > $(OUTPUT)/apollo_cholmod_residuals.csv;
+	$(CAT) bundleout_images.csv \
+	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+	       > $(OUTPUT)/apollo_cholmod_bundleout_images.csv;
 	$(RM) bundleout_images.csv > /dev/null;
 	$(MV) bundleout_points.csv $(OUTPUT)/apollo_cholmod_bundleout_points.csv > /dev/null;
 	$(RM) bundleout.txt print.prt > /dev/null;
