--- a/isis/src/base/apps/findimageoverlaps/tsts/default/Makefile
+++ b/isis/src/base/apps/findimageoverlaps/tsts/default/Makefile
@@ -4,5 +4,5 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/cubes.lis;
-	$(APPNAME) FROM=$(OUTPUT)/cubes.lis OVERLAPLIST=$(OUTPUT)/overlaps.txt > /dev/null;
+	$(APPNAME) FROMLIST=$(OUTPUT)/cubes.lis OVERLAPLIST=$(OUTPUT)/overlaps.txt > /dev/null;
 	$(RM) $(OUTPUT)/cubes.lis;
