Removed PSF correction from AMICACAL until some bugs related to that are worked out.  Also made changes to the Calibrate function. Fixes #4222.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6986 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/hayabusa/apps/amicacal/tsts/iof/Makefile
+++ b/isis/src/hayabusa/apps/amicacal/tsts/iof/Makefile
@@ -5,10 +5,8 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) \
         FROM=$(INPUT)/st_2459265790_w.cub \
-        TO=$(OUTPUT)/corrected_iof_st_2459265790_w.cub \
-        PSFCORRECTED=$(OUTPUT)/corrected_psfcorrected_iof_st_2459265790_w.cub >/dev/null;\
+        TO=$(OUTPUT)/corrected_iof_st_2459265790_w.cub > /dev/null;\
         $(APPNAME) \
         FROM=$(INPUT)/st_2459265790_w.cub \
         TO=$(OUTPUT)/corrected_noiof_st_2459265790_w.cub \
-        PSFCORRECTED=$(OUTPUT)/corrected_psfcorrected_noiof_st_2459265790_w.cub \
         iof=no > /dev/null;
