Added an ObliqueDetectorResolution band to phocube.  This is an improved approximation to the standard DetectorResolution band.  References #476
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7069 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/phocube/tsts/allbands/Makefile
+++ b/isis/src/base/apps/phocube/tsts/allbands/Makefile
@@ -20,6 +20,7 @@ commands:
 	  lineresolution=true \
 	  sampleresolution=true \
 	  detectorresolution=true \
+	  obliquedetectorresolution=true \
 	  northazimuth=true \
 	  sunazimuth=true \
 	  spacecraftazimuth=true \
