--- a/isis/src/base/apps/noseam/tsts/default/Makefile
+++ b/isis/src/base/apps/noseam/tsts/default/Makefile
@@ -6,5 +6,5 @@ commands:
 	$(LS) $(INPUT)/* > $(OUTPUT)/cubes.lis;
 	$(APPNAME) FROMLIST=$(OUTPUT)/cubes.lis \
 	TO=$(OUTPUT)/result.cub \
-	HNS=73 HNL=73 LNS=73 LNL=73 > /dev/null;
+	SAMPLES=73 LINES=73 > /dev/null;
 	$(RM) $(OUTPUT)/cubes.lis;
