PROG: Added tolerance for emalTruth.cub for fx bandDependent test. This allows macs to pass. References #1301.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7165 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/fx/tsts/bandDependent/Makefile
+++ b/isis/src/base/apps/fx/tsts/bandDependent/Makefile
@@ -3,7 +3,12 @@
 # various camera functions.
 #
 # 2016-10-13 Ian Humphrey - Original version. References #1301.
+# 2016-10-14 Ian Humphrey - Added a tolerance for emalTruth.cub. On the macs, cubediff between the
+#                output and truth emalTruth.cub reported a difference at 15,10,5 (S,L,B). This
+#                tolerance allows the macs to pass the test. References #1301.
 APPNAME = fx
+
+emalTruth.cub.TOLERANCE = 0.00001
 
 include $(ISISROOT)/make/isismake.tsts
 
