--- a/isis/src/control/apps/jigsaw/tsts/pole-ra-dec-w0-wDot-triaxial-radii/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/pole-ra-dec-w0-wDot-triaxial-radii/Makefile
@@ -19,25 +19,28 @@ APPNAME = jigsaw
 #triaxial test
 
 include $(ISISROOT)/make/isismake.tsts
-#jigsaw fromlist=cubes.lis cnet=input/enc_global_fin2-cl14_forken_extract_cl-salih-lon-constrained.net onet=triaxial.net errorpropagation=yes solvetargetbody=yes tb_parameters=input/EnceladusTargetBodyParameters-pole-ra-dec-w0-wDot-triaxial-radii.pvl camera_angles_sigma=2.0
+#jigsaw fromlist=cubes.lis cnet=input/enc_global_fin2-cl14_forken_extract_cl-salih-lon-constrained.net onet=triaxial.net 
+#errorpropagation=yes solvetargetbody=yes 
+#tb_parameters=input/EnceladusTargetBodyParameters-pole-ra-dec-w0-wDot-triaxial-radii.pvl camera_angles_sigma=2.0
 commands:
 	$(LS) -1 $(INPUT)/*.cub > $(OUTPUT)/cubes.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/cubes.lis cnet=$(INPUT)/enc_global_fin2-cl14_forken_extract_cl-salih-lon-constrained.net \
-	onet=$(OUTPUT)/triaxial.net errorpropagation=yes solvetargetbody=yes tbparameters=$(INPUT)/EnceladusTargetBodyParameters-pole-ra-dec-w0-wDot-triaxial-radii.pvl \
-	file_prefix=$(OUTPUT)/ camera_angles_sigma = 2.0 > /dev/null;		
+        onet=$(OUTPUT)/triaxial.net errorpropagation=yes solvetargetbody=yes tbparameters=$(INPUT)/EnceladusTargetBodyParameters-pole-ra-dec-w0-wDot-triaxial-radii.pvl \
+        file_prefix=$(OUTPUT)/ camera_angles_sigma = 2.0 > /dev/null;           
 	$(CAT) $(OUTPUT)/bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
-	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	       | $(SED) s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
-	       > $(OUTPUT)/pole-ra-dec-w0-wDot-triaxial-radii_bundleout.txt;
+               | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+               | $(SED) s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
+               > $(OUTPUT)/pole-ra-dec-w0-wDot-triaxial-radii_bundleout.txt;
 	$(CAT) $(OUTPUT)/bundleout_images.csv \
-	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	       > $(OUTPUT)/bundleout_images.csv;
+               | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+               > $(OUTPUT)/pole-ra-dec-w0-wDot-triaxial-radii_bundleout_images.csv;
 	$(CAT) $(OUTPUT)/residuals.csv \
-	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	       > $(OUTPUT)/pole-ra-dec-w0-wDot-triaxial-radii_residuals.csv;
-	$(MV) $(OUTPUT)/bundleout_images.csv $(OUTPUT)/pole-ra-dec-w0-wDot-triaxial-radii_bundleout_images.csv > /dev/null;
+               | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+               > $(OUTPUT)/pole-ra-dec-w0-wDot-triaxial-radii_residuals.csv;
 	$(MV) $(OUTPUT)/bundleout_points.csv $(OUTPUT)/pole-ra-dec-w0-wDot-triaxial-radii_bundleout_points.csv > /dev/null;
 	$(RM) $(OUTPUT)/cubes.lis > /dev/null;
 	$(MV) $(OUTPUT)/triaxial.net $(OUTPUT)/out-pole-ra-dec-w0-wDot-triaxial-radii.net > /dev/null;
 	$(RM) $(OUTPUT)/residuals.csv > /dev/null;
 	$(RM) $(OUTPUT)/bundleout.txt > /dev/null;
+	$(RM) $(OUTPUT)/bundleout_images.csv > /dev/null;
+
