PROG: (maintenance prog17) Fixed pixel2map multipleInputCubes test failing; added tolerance for shadow moon test; updated BundleUtilities unitTest and truth; removed unused variables in MatrixOptionsDialog; fixed include guard in ProjectItemTreeView.h.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7282 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/pixel2map/tsts/multipleInputCubes/Makefile
+++ b/isis/src/base/apps/pixel2map/tsts/multipleInputCubes/Makefile
@@ -3,8 +3,11 @@
 # The send test ensures that band selection works within a fromlist, and that it creates the
 #   expected output (output identical to band 2 of the first test's output).
 #
-# @history 2016-11-18 Ian Humphrey - Added documentation to Makefile. Added TEST 2.
-#                         References #4520.
+# @internal
+#   @history 2016-11-18 Ian Humphrey - Added documentation to Makefile. Added TEST 2.
+#                           References #4520.
+#   @history 2016-12-01 Ian Humphrey - Replaced xargs deprecated -i with -I. The -i
+#                           option was unrecognized on prog17.
 APPNAME = pixel2map
 
 include $(ISISROOT)/make/isismake.tsts
@@ -20,7 +23,7 @@ commands:
 	# TEST 2
 	# Test the fromlist with band selection (band 2).
 	# Note the command below is adding +2 to each of the input cube listings, then redirecting. 
-	$(LS) $(INPUT)/*.cub | xargs -i echo "{}+2" > $(OUTPUT)/files.lis;
+	$(LS) $(INPUT)/*.cub | xargs -I "{}" echo "{}+2" > $(OUTPUT)/files.lis;
 	$(APPNAME) fromtype=fromlist \
 	           fromlist=$(OUTPUT)/files.lis \
 	           to=$(OUTPUT)/combinedCubesBand2.sinu.cub \
