Reverted cnetcombinept Makefile to standard file (removed -frounding-math). Fixes clang warning on prog17 about unsupported compile flag.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7283 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetcombinept/Makefile
+++ b/isis/src/control/apps/cnetcombinept/Makefile
@@ -1,3 +1,7 @@
-include $(ISISROOT)/make/isismake.apps
-
-ISISCPPFLAGS += -frounding-math
+ifeq ($(ISISROOT), $(BLANK))
+.SILENT:
+error:
+	echo "Please set ISISROOT";
+else
+	include $(ISISROOT)/make/isismake.apps
+endif
