--- a/isis/src/control/apps/jigsaw/tsts/pole-ra-dec-w0-wDot-mean-radius/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/pole-ra-dec-w0-wDot-mean-radius/Makefile
@@ -25,6 +25,7 @@ commands:
 	file_prefix=$(OUTPUT)/ > /dev/null;
 	$(CAT) $(OUTPUT)/bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
 	       | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+	       | $(SED) 's/\([0-9][0-9]*\.[0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	       | $(SED) s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	       > $(OUTPUT)/pole-ra-dec-w0-wDot-mean-radius_bundleout.txt;
 	$(CAT) $(OUTPUT)/bundleout_images.csv \
