Modified cnetcombinept's nearest neighbor search to use image space instead of ground space.  Fixes #4558.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7296 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetcombinept/tsts/noclean/Makefile
+++ b/isis/src/control/apps/cnetcombinept/tsts/noclean/Makefile
@@ -9,6 +9,8 @@ commands:
 	           networkid=Equi065S355ED10 \
 	           description="Messenger data test" \
 	           imagetol=3000.0 \
+	           cleannet=false \
+	           cleanmeasures=false \
 	           > /dev/null;
 
 	$(RM) $(OUTPUT)/networks.lis;
