Modified CnetRefByResolution and ControlNetValidMeasure to handle invalid measures in cnetref when using the High resolution setting. #Fixes 2149.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7314 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetref/tsts/resolutionHigh/Makefile
+++ b/isis/src/control/apps/cnetref/tsts/resolutionHigh/Makefile
@@ -15,3 +15,8 @@ commands:
 	  networkid=DefaultTruth \
 	  Description=RefByResolutionHigh > /dev/null;
 	  $(RM) $(OUTPUT)/cube.lis;
+	$(APPNAME) fromlist=$(INPUT)/apolloList.lis \
+	  cnet=$(INPUT)/apolloSeed.net \
+	  criteria=resolution \
+	  type=high \
+	  onet=$(OUTPUT)/apolloTruth.net > /dev/null;
