Updated hrsc2isis error messages when ingesting a map projected image and when trying to ingest an image that is not an hrsc image.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7317 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mex/apps/hrsc2isis/tsts/default/Makefile
+++ b/isis/src/mex/apps/hrsc2isis/tsts/default/Makefile
@@ -8,6 +8,8 @@ commands:
 	catlab FROM=$(OUTPUT)/h0279_0000_re2.cub to=$(OUTPUT)/h0279_0000_re2.pvl > /dev/null;
 	if [ `$(APPNAME) FROM=$(INPUT)/h1580_0008_sr3.img \
 	  TO=$(OUTPUT)/junk.cub \
-	   >& $(OUTPUT)/error.txt` ]; \
+	   >& $(OUTPUT)/error_message_temp.txt` ]; \
 	then true; \
 	fi;
+	$(SED) 's+\[/.*/input/+\[input/+' $(OUTPUT)/error_message_temp.txt > $(OUTPUT)/error.txt;
+	$(RM)  $(OUTPUT)/error_message_temp.txt;
