PROG:  Forgot to commit a modified Makefile for the hayabusa::amicacal iof test.  References #3880
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7341 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/hayabusa/apps/amicacal/tsts/iof/Makefile
+++ b/isis/src/hayabusa/apps/amicacal/tsts/iof/Makefile
@@ -9,4 +9,4 @@ commands:
         $(APPNAME) \
         FROM=$(INPUT)/st_2459265790_w.cub \
         TO=$(OUTPUT)/corrected_noiof_st_2459265790_w.cub \
-        iof=no > /dev/null;
+        units=dn > /dev/null;
